Change history for URI-PackageURL

2.22 2024-12-16
    - Improved parsing of non-canonical PURL (package-url/purl-spec#363)
    - Improved "URI::VersionRange->constraint_contains"
    - Updated "maven" repository URL
    - FIX typo in documentation
    - Synced "test-suite-data.json" from "package-url/purl-spec"

2.21 2024-07-24
    - Use RFC 2119 terms for CPAN purl type specification (sjn)
    - Added "swid" purl type support
    - Moved normalization and validation check in "URI::PackageURL::Util"
    - Dropped support for "version_prefix" qualifier for "github", "gitlab" and 
      "bitbucket" PURL types in "purl_to_urls" util (pombredanne via giterlizzi/perl-URI-PackageURL#14)

2.20 2024-05-13
    - Added support for the official "cpan" PURL type specification (giterlizzi/perl-URI-PackageURL#8)
    - Added "Version Range" (vers) support (giterlizzi/perl-URI-PackageURL#12)
    - Added "URI::VersionRange::Version::cpan" version comparator for "cpan" scheme
    - Added "vers-tool(1)"
    - FIX Apply percent-encoding in "subpath" in "to_string" method

2.11 2024-04-19
    - Improved the cpan PURL type to be compatible with the 'PURL-TYPES' specification
      (giterlizzi/perl-URI-PackageURL#8 - https://github.com/package-url/purl-spec/blob/master/PURL-TYPES.rst)
    - Added "luarocks" PURL type support
    - Improved test suite (giterlizzi/perl-URI-PackageURL#11)
    - Renamed CLI package in "URI::PackageURL::App"
    - Changed JSON module pre-requisite to "JSON::PP" to be compatible with CPAN Toolchain
      (giterlizzi/perl-URI-PackageURL#12)

2.04 2023-11-16
    - Added "docker", "bitbuket", "golang" support to
      "URI::PackageURL::Util::purl_to_urls"
    - Added new options for create canonical purl string using "purl-tool(1)"
      (giterlizzi/perl-URI-PackageURL#9)
    - Added sample scripts
    - Removed empty "qualifier" keys in "URI::PackageURL->from_string"

2.03 2023-11-09
    - Improved validation during encode and decode "purl" string