@@ -49,4 +49,16 @@ is decode_vers('vers:cpan/<v13.37')->contains($_), !!1, "$_ version in range" fo
 eval { decode_vers('foo:bar<baz') };
 like "$@", qr/Malformed Version Range string/;
 
+# Test generic schemes
+is decode_vers('vers:generic/*')->contains($_), !!1, "$_ version in range" for (sort @in_range);
+is decode_vers('vers:all/*')->contains($_),     !!1, "$_ version in range" for (sort @in_range);
+is decode_vers('vers:none/*')->contains($_),    !!1, "$_ version in range" for (sort @in_range);
+
+eval { decode_vers('vers:all/1.00') };
+like "$@", qr/Malformed Version Range string/;
+
+eval { decode_vers('vers:none/1.00') };
+like "$@", qr/Malformed Version Range string/;
+
+
 done_testing();
